# tech-portal

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  askama.toml  build.rs  css.sh  justfile  kanban  run.kdl  test.sh
assets/: package-lock.json  package.json  tailwind.config.js
assets/css/: landing.css  output.css
assets/html/components/: edit_event.html  event.html  test.html
assets/html/layouts/: base.html
assets/html/pages/: edit_event.html  events.html  home.html  landing.html  login.html  new_event.html  site.html
assets/js/: main.js
src/: auth.rs  catchers.rs  htmx.rs  main.rs
src/actions/: events.rs  login.rs  mod.rs
src/db/: event.rs  mod.rs  session.rs  site.rs  user.rs
src/pages/: events.rs  home.rs  login.rs  mod.rs
src/routes/: home.rs  mod.rs
src/routes/events/: actions.rs  mod.rs
src/routes/login/: actions.rs  mod.rs
src/routes/site/: actions.rs  mod.rs
templates/layouts/: base.html
templates/pages/: hello.html
