[package]
name = "tech-portal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.5"
chrono = "0.4.38"
dotenv = "0.15.0"
libsql = "0.3.5"
libsql-client = "0.30.1"
reqwest = "0.12.4"
serde = { version = "1.0.200", features = ["derive"] }
shuttle-axum = "0.44.0"
shuttle-runtime = "0.44.0"
shuttle-secrets = "0.42.0"
shuttle-turso = "0.44.0"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-livereload = "0.9.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
