[package]
name = "tech-portal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
argon2 = "0.5.3"
askama = "0.12.1"
askama_rocket = "0.12.0"
dotenv = "0.15.0"
libsql = "0.3.5"
rocket = { version = "0.5.0", features = ["secrets"] }
serde = "1.0.201"
shuttle-rocket = "0.44.0"
shuttle-runtime = "0.44.0"
shuttle-turso = "0.44.0"
tokio = "1.26.0"
tracing = "0.1.40"
uuid = "1.8.0"

[build-dependencies]
npm_rs = "1.0.0"
